# scrapy_tutotial

./: README.md  pyproject.toml
