[tool.poetry]
name = "scrapy_tutorial"
version = "0.1.0"
description = ""
authors = ["kyoungho.moon <kyoungho.moon@purpleworks.co.kr>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
